# type-safari

./: .hlint.yaml  LICENSE  README.md  justfile  pnpm-lock.yaml
blog/: .gitignore  blog.cabal  hie.yaml  index.html
blog/bib/: refs.bib
blog/chapters/: 00-introduction.md
blog/chapters/01-type-systems/: 00-notation.md  01-simply-typed.md  02-hindley-milner.md  04-dependent-types.md
blog/chapters/02-hindley-milner/: 01-intro.md  02-algorithm-w.md  03-algorithm-m.md  05-recursion.md  06-type-annotations.md  09-quick-look.md
blog/chapters/02-unification/: 01-syntactic-unification.md
blog/chapters/03-hindley-milner/: 01-intro.md  04-algorithm-j.md  07-higher-rank.md  08-higher-kinds.md  10-gundry-contexts.md
blog/chapters/03-system-f/: 01-intro.md
blog/chapters/04-language-design/: 01-advice.md
blog/chapters/05-dependent-types/: 02_nbe.md
blog/chapters/06-language-design/: 02-units-of-measure.md
blog/code/: code01.let
blog/css/: pandoc-syntax.css  style.css
blog/lib/: type-safari.js  type-safari.umd.cjs
blog/noemit/katex-macros/: notation-default.katex
blog/src/: Biblio.hs  KaTeX.hs  site.hs
blog/templates/: default.html  page.html  post.html
docs/: index.html
docs/chapters/: 00-introduction.html
docs/chapters/01-type-systems/: 00-notation.html  01-simply-typed.html  02-hindley-milner.html  04-dependent-types.html
docs/chapters/02-hindley-milner/: 01-intro.html  02-type-annotations.html
docs/chapters/03-system-f/: 01-intro.html
docs/chapters/04-language-design/: 01-advice.html
docs/css/: pandoc-syntax.css
docs/lib/: type-safari.js
docs/type-safari/chapters/01-type-systems/: 03-system-f.html
docs/type-safari/chapters/02-hindley-milner/: 01-intro.html  02-type-annotations.html
docs/type-safari/chapters/04-language-design/: 01-advice.html
docs/type-safari/css/: style.css
docs/type-safari/lib/: style.css  type-safari.js
haskell/: .gitignore  build.sh  cabal.project.local  hie.yaml  type-safari.cabal
haskell/src/TypeSafari/: Core.hs  Pretty.hs
haskell/src/TypeSafari/Api/: Infer.hs  InferAbstract.hs  InferConcrete.hs  Parse.hs  ParseExample.hs  ParseType.hs  Unify.hs
haskell/src/TypeSafari/Core/: Parser.hs
haskell/src/TypeSafari/FFI/: StringWithLen.hs  Util.hs
haskell/src/TypeSafari/HindleyMilner/: Infer.hs  Parse.hs  ParseV1.hs  ParseV2.hs  Syntax.hs
haskell/src/TypeSafari/HindleyMilner/Infer/: Abstract.hs  Concrete.hs
haskell/src/TypeSafari/HindleyMilner/Syntax/: Concrete.hs  Core.hs  Expr.hs  Type.hs
haskell/src/TypeSafari/Parse/: Example.hs  Located.hs  Span.hs
haskell/src/TypeSafari/RecursionSchemes/: Mu.hs
haskell/src/TypeSafari/Wasm/: Main.hs
haskell/src/cbits/: init.c
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: main.wasm  type-safari.wasm
web/src/: index.css  index.tsx  main.tsx  shared.css
web/src/components/CodeEditor/: CodeEditor.css  CodeEditor.tsx
web/src/demos/: TypeInference.tsx
web/src/editor/: ErrorPlugin.ts  ParseInfoPlugin.ts  highlightActiveLine.ts  parseTreeUpdater.ts
web/src/lezer/: binop.grammar  lang.grammar  lang.ts  print-lezer-tree.ts  simple.grammar
web/src/syntax/: Expr.ts
web/src/types/: lezer.d.ts
web/src/util/: types.ts
web/src/worker/: WasmApi.ts  worker.ts  workerApi.ts
